updated reports section with GleamTechViwer,Added PM CV log- on 07-03-2025

--- a/CV_ManagementSystem/Web.config
+++ b/CV_ManagementSystem/Web.config
@@ -102,6 +102,22 @@
         <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Primitives" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Caching.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Caching.Memory" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.1" newVersion="8.0.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Options" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.2" newVersion="8.0.0.2" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -141,5 +157,6 @@
     <add key="Telerik.Skin" value="Silk" />
     <add key="Telerik.ScriptManager.TelerikCdn" value="Disabled" />
     <add key="Telerik.StyleSheetManager.TelerikCdn" value="Disabled" />
+	  <add key="DocumentUltimate:LicenseKey" value="QEE7VKENAA-SUGRKY53CJ-RP6A8BLA1Q-UXF9NAJ1C3-MDHAPV27QX-K2FU3HUSS8-UXXBSRY4UX-NBJFY4JW37-WRS2" />
   </appSettings>
 </configuration>
