--- a/CV_ManagementSystem/packages.config
+++ b/CV_ManagementSystem/packages.config
@@ -6,6 +6,8 @@
   <package id="Azure.Identity" version="1.11.4" targetFramework="net48" />
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net48" />
+  <package id="GleamTech.Common" version="6.3.1" targetFramework="net48" />
+  <package id="GleamTech.DocumentUltimate" version="7.3.4" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net48" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net48" />
@@ -41,6 +43,7 @@
   <package id="System.ClientModel" version="1.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
   <package id="System.IdentityModel.Tokens.Jwt" version="7.5.0" targetFramework="net48" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
   <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Memory.Data" version="1.0.2" targetFramework="net48" />
