--- a/CV_ManagementSystem/Web.config
+++ b/CV_ManagementSystem/Web.config
@@ -144,7 +144,7 @@
       <add name="Telerik_Web_UI_DialogHandler_aspx" path="Telerik.Web.UI.DialogHandler.aspx" type="Telerik.Web.UI.DialogHandler" verb="*" preCondition="integratedMode" />
       <add name="Telerik_RadUploadProgressHandler_ashx" path="Telerik.RadUploadProgressHandler.ashx" type="Telerik.Web.UI.RadUploadProgressHandler" verb="*" preCondition="integratedMode" />
       <add name="Telerik_Web_UI_WebResource_axd" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" verb="*" preCondition="integratedMode" />
-      <add name="ReportViewerWebControlHandler" verb="*" path="Reserved.ReportViewerWebControl.axd" preCondition="integratedMode" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </handlers>
     <security>
       <requestFiltering>
@@ -157,6 +157,6 @@
     <add key="Telerik.Skin" value="Silk" />
     <add key="Telerik.ScriptManager.TelerikCdn" value="Disabled" />
     <add key="Telerik.StyleSheetManager.TelerikCdn" value="Disabled" />
-	  <add key="DocumentUltimate:LicenseKey" value="QEE7VKENAA-SUGRKY53CJ-RP6A8BLA1Q-UXF9NAJ1C3-MDHAPV27QX-K2FU3HUSS8-UXXBSRY4UX-NBJFY4JW37-WRS2" />
+    <add key="DocumentUltimate:LicenseKey" value="QEE7VKENAA-SUGRKY53CJ-RP6A8BLA1Q-UXF9NAJ1C3-MDHAPV27QX-K2FU3HUSS8-UXXBSRY4UX-NBJFY4JW37-WRS2" />
   </appSettings>
 </configuration>
